2010-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Quote error message for invalid size.

2010-10-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (read_size_byte/get_size_byte):
	  CNF_DEVICE_OUTPUT_BUFFER_SIZE is in bytes.

2010-10-14 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules, packaging/deb/buildpkg,
	   packaging/rpm/amanda.spec.src: remove port range limits for
	   rpm and deb packages

2010-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/amglue/ghashtable.c: Define PERL_MAGIC_tied.

2010-10-12  Jean-Louis Martineau <martineau@zmanda.com>
        * device-src/s3-device.c: Don't check 'self->use_ssl && !self->ca_info'.

2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_comm_session.c: add a g_debug message
	* ndmp-src/ndmjob_main.c: remove redundant exit-on-stdin-eof

2010-10-12 Dan Locks <dwlocks@zmanda.com>
	*  config/amanda/progs.m4: add comment about sysloc- and locsys- path,
	   make MTX a precious variable.

2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/amndmjob_main.c: remove exit on eof thread
	* ndmp-src/ndmjob_main.c: add it here, in the right place

2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/ssh-security.c: don't munge $SSH_CONNETION

2010-10-12  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/swig.m4: add '.' to freebsd versions
	* perl/Makefile.am: spell it -pthread

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: add fake driver finish first

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amflush.c: write a "pid done" line when cancelling
	* server-src/amcleanup.pl: run amlogroll internally

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: remove cont_filename from header before
	  writing to a real volume
	* perl/Amanda/Recovery/Clerk.pm: remove it when restoring, too

2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>