@@ -1,3 +1,8 @@
+2010-10-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/ampgsql.pl: Give an error if client property
+	  pg-datadir is different than diskdevice. Use diskdevice if client
+	  property pg-datadir is not set.
+
 2010-10-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/security-util.c: Quote error message for invalid size.
 
